# qthu

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
bricks/: bitlevel.tpp  brick-assert  brick-base64  brick-bitlevel  brick-cmd  brick-compact  brick-compose  brick-cons  brick-curl  brick-dds  brick-diff  brick-enumerate  brick-except  brick-fcmp  brick-fs  brick-hash  brick-hashset  brick-interval  brick-json  brick-llvm  brick-llvm-link  brick-malloc  brick-mem  brick-min  brick-nat  brick-proc  brick-ptr  brick-query  brick-salloc  brick-sha2  brick-shmem  brick-smt  brick-smtlib  brick-sql  brick-sql-data  brick-sql-exec  brick-sql-expr  brick-sql-stmt  brick-sql-util  brick-string  (+12 more)
cmake/: quickjs.cmake
cthu/: builtins.ct  bundle.gib  dict.hpp  exec.hpp  function.hpp  lexer.cpp  lexer.hpp  main.cpp  opcode.hpp  prelude.ct  program.hpp  reader.cpp  reader.hpp  signature.hpp  stack.hpp  state.hpp  structure.hpp
cthu/test/: fib.ct
src/: asmbuilder.hpp  bcbuilder.hpp  bcrun.c  builder_demo.cpp  config.hpp  encoder.hpp  lexer.hpp  main.cpp  opcodes.hpp  qasm.cpp  qasm.hpp
src/asm/: asm.cpp  asm.hpp  asmbuilder.hpp  directive.cpp  directive.hpp  instruction.cpp  instruction.hpp  op_builders.hpp  opcodes.hpp  qasm.cpp  qassembly.cpp  qassembly.hpp
src/bytecode/: encoder.hpp  program.hpp
src/common/: document.hpp  document_store.hpp  file.hpp  file_store.hpp  lexer.hpp  lexer_base.hpp  limits.hpp  parser.hpp  parser_base.hpp  types.hpp  utf8.hpp
src/cthu/: builtins.ct  codegen.cpp  codegen.hpp  function.hpp  ir.hpp  lexer.cpp  lexer.hpp  main.cpp  opcode.hpp  prelude.ct  reader.cpp  reader.hpp  resolve.hpp  signature.hpp  structure.hpp  symtab.hpp  types.hpp
src/cthu_core/: types.hpp
src/cthuc/: codegen.cpp  codegen.hpp  ir.hpp  lexer.cpp  lexer.hpp  main.cpp  reader.cpp  reader.hpp  symtab.hpp
src/cthucc/: builtins.ct  codegen.cpp  codegen.hpp  ir.hpp  lexer.cpp  lexer.hpp  main.cpp  prelude.ct  reader.cpp  reader.hpp  resolve.hpp  symtab.hpp  types.hpp
src/jsc/: ast.hpp  codegen.hpp  jsc.cpp  lexer.hpp  main.cpp  parser.hpp  symtab.hpp  token.hpp
src/jsc/driver/: compiler.hpp  config.hpp
src/jsc/frontend/: ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.hpp
src/jsc/ir/: hir.hpp
src/jsc/lower/: ast2hir.hpp  hir2cthu.hpp
src/jsc/printer/: pretty_printer.cpp  pretty_printer.hpp
src/jsc/sema/: analysis.hpp  types.hpp
src/jscc/: main.cpp
src/jscc/ct/: builtins.ct  prelude.ct
src/jscc/driver/: compiler.hpp  config.hpp
src/jscc/frontend/: ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.hpp
src/jscc/ir/: hir.hpp
src/jscc/lower/: ast2hir.hpp  hir2cthu.hpp
src/jscc/printer/: pretty_printer.cpp  pretty_printer.hpp
src/jscc/sema/: analysis.hpp  types.hpp
src/toy/: ast.hpp  codegen.hpp  lexer.hpp  parser.hpp  symtab.hpp  token.hpp  toy.cpp
test/: fib.txt  fibonacci
test/cthu/: builtins.ct  fact.ct  fib.ct  prelude.ct
test/cthucc/: builtins.ct  fib.ct
test/jsc/: add
test/jscc/parser/good/: expr.js
test/qasm/: add.qasm  fib.qasm  ret.qasm
test/toy/: fibonacci.toy  max.toy
